Edit user login

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,9 +13,6 @@
         <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
             <li>
-              <p class="mt-auto mb-auto mr-3">ようこそ、<%= current_customer.first_name %>さん！</p>
-            </li>
-            <li>
               <%= link_to "マイページ", user_user_path(current_user), class: 'btn btn-primary mr-2' %>
             </li>
             <li>
@@ -36,7 +33,7 @@
               <%= link_to "管理者ログイン", admin_session_path, class: 'btn btn-primary mr-1' %>
             </li>
             <li>
-              <%= link_to "お問い合わせ", public_homes_conta_path, class: 'btn btn-primary mr-2' %>
+              <%= link_to "お問い合わせ", user_homes_contact_path, class: 'btn btn-primary mr-2' %>
             </li>
           <% end %>
         </ul>
