--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -5,9 +5,9 @@
     <div class="col-md-12">
       <%= link_to 'ユーザ一覧', admin_users_path %>
       <%= link_to '動画投稿一覧', admin_videos_path %>
-      <%= link_to '告知一覧', admin_users_path %>
+      <%= link_to '告知一覧', admin_informations_path %>
       <%= link_to 'ジャンル一覧', admin_genres_path %>
-      <%= link_to 'ステータス一覧', user_informations_path %>
+      <%= link_to 'ステータス一覧', admin_statuses_path %>
     </div>
   </div>
 </div>
