--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -31,6 +31,12 @@
           <th>メールアドレス</th>
           <th><%= @user.email %></th>
         </tr>
+        <tr>
+          <th><%= link_to "編集", edit_user_user_path(@user.id) %></th>
+        </tr>
+        <tr>
+          <th><%= link_to "動画投稿", new_user_video_path %></th>
+        </tr>
       </table>
         
     </div>
