--- a/app/views/user/comments/index.html.erb
+++ b/app/views/user/comments/index.html.erb
@@ -1,9 +1,11 @@
+コメント
+
 <table>
   <% @video.comments.each do |comment| %>
     <% comment_user = comment.user %>
     <tr>
     	<td>
-    		<%= link_to user_user_path(comment_user),  do %>
+    		<%= link_to user_user_path(comment_user), do %>
       		<%= attachment_image_tag comment_user, :icon, :fill, 50, 50, fallback: "no_image.jpg", size: "50x50" %><br>
       		<%= comment_user.name %>
     		<% end %>
