--- a/app/views/user/comments/index.html.erb
+++ b/app/views/user/comments/index.html.erb
@@ -5,19 +5,19 @@
     <% comment_user = comment.user %>
     <tr>
     	<td>
-    		<%= link_to user_user_path(comment_user), do %>
+    		<%= link_to user_user_path(comment_user) do %>
       		<%= attachment_image_tag comment_user, :icon, :fill, 50, 50, fallback: "no_image.jpg", size: "50x50" %><br>
-      		<%= comment_user.name %>
+      		<%= comment_user.nick_name %>
     		<% end %>
     	</td>
     	<td><%= comment.comment %></td>
     	<% if current_user == comment_user %>
-      	<td><%= link_to 'Destroy', user_comment_path(comment.video_id, comment.id), class: 'btn-sm btn-danger', method: :delete %></td>
+      	<td><%= link_to 'Destroy', user_video_comment_path(comment.video_id, comment.id), class: 'btn-sm btn-danger', method: :delete %></td>
     	<% end %>
     </tr>
   <% end %>
 </table>
-<%= form_with model:[@video,@comment] do |f| %>
+<%= form_with model:[@video,@comment], url: user_video_comments_path, method: :POST do |f| %>
   <%= f.text_area :comment, size:"90x5" %><br>
   <%= f.submit '送信'%>
 <% end %>
