--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,5 +1,5 @@
 <!--if チャレンジャー-->
-<% if current_user.account == "challenger" %>
+<% if @user.account == "challenger" %>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -92,7 +92,21 @@
           <tr>
             <th><%= link_to "告知投稿", new_user_information_path %></th>
           </tr>
+          <tr>
+            <th><%= link_to "告知一覧", user_informations_path %></th>
+          </tr>
         </table>
+        <% if current_user != @user %>
+          <% if current_user.following?(@user) %>
+            <%= link_to "フォローを外す", user_user_relationships_path(@user.id), method: :delete, class: "btn btn-info" %>
+          <% else %>
+            <%= link_to "フォローする", user_user_relationships_path(@user.id), method: :post, class: "btn btn-success" %>
+          <% end %>
+        <% else %>
+          <%= link_to edit_user_user_path(@user.id), class:"btn btn-default btn-block" do %>
+            <span class="fas fa-user-cog"></span>
+          <% end %>
+        <% end %>
       </div>
     </div>
   </div>
