--- a/app/views/user/informations/new.html.erb
+++ b/app/views/user/informations/new.html.erb
@@ -1,17 +1,17 @@
-告知投稿
+<h2>告知投稿</h2>
 
-<%= form_with model:@information, url: user_informations_path, local:true do |f| %>
-      <!--title-->
+<%= form_with model:@informations, url: user_informations_path, local:true do |f| %>
+      
   <div class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title, class: 'form-control information_title' %>
   </div>
-      <!--opinion-->
+      >
   <div class="form-group">
     <%= f.label :content %>
     <%= f.text_area :content, class: 'form-control information_body' %>
   </div>
-      <!--Create Book  New bookを作成-->
+    
   <div class="form-group">
     <%= f.submit  class: 'btn btn-success' %>
   </div>
