--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -103,6 +103,9 @@
           <tr>
             <th><%= link_to "告知一覧", user_informations_path %></th>
           </tr>
+          <tr>
+            <th><%= link_to "ユーザ一覧", whole_user_users_path %></th>
+          </tr>
         </table>
         <% if current_user != @user %>
           <% if current_user.following?(@user) %>
