--- a/app/views/user/users/whole.html.erb
+++ b/app/views/user/users/whole.html.erb
@@ -1,5 +1,4 @@
-<!--コーチ一覧-->
-<h2>コーチ一覧</h2>
+<h2>ユーザ一覧</h2>
 
 <% @users. each do |user| %>
   <%= link_to user.full_name, user_user_path(user) %>
@@ -7,5 +6,3 @@
   <%= user_genre.name %>
   <%= user.account %>
 <% end %>
-
-  
