--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -4,10 +4,9 @@
     <div class="col-md-12">
       <%= form_with model: @user,url: user_user_path(current_user), local: true do |f| %>
         <table class="table">
-          <tr>
-            <th><%= attachment_image_tag(@user, :icon, :full, 100, 100, fallback: "no_image.jpeg") %></th>
-            
-          </tr>
+          <!--<tr>-->
+          <!--  <th>%= f.attachment_field :icon %></th>-->
+          <!--</tr>-->
           <tr>
             <th>名前</th>
             <th><%= f.text_field :full_name %></th>
