--- a/app/views/user/videos/show.html.erb
+++ b/app/views/user/videos/show.html.erb
@@ -1,16 +1,57 @@
-<h2>動画詳細</h2>
-
-<% if @video.video.attached? %>
-  <video src="<%= rails_blob_path(@video.video) %>" type="video/mp4" controls></video>
-  <p><%= @video.title %></p> <br>
-  <p><%= @video.content %></p> <br>
-  <% @video_genre = @video.genre %>
-  <p><%= @video_genre.name %></p>
-<% end %>
-
-<!--%= render 'comments/comment', video: @video, comment: @comment %>-->
-
-<!--自分の投稿時のみ表示に-->
-<%= link_to "削除する", user_video_path(@video), method: :delete %>
-
-<%= link_to "コメントする", user_video_comments_path(@video) %>
+<div class="p-main mt-3">
+  <div class="row mx-0 ml-2">
+    <i class="fas fa-arrow-left"></i>
+    <%= link_to "戻る", user_videos_path %>
+  </div>
+  <h2 class="text-center mb-3 pb-3" style="color: #1a1a1a; border-bottom: solid 1px #EB3642;">動画詳細</h2>
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <div class>
+        <div class="col-xs-12 mx-auto video_border">
+          <% if @video.video.attached? %>
+            <div class="form-group row px-2">
+              <label for="video" class="col-md-4 col-form-label text-md-right c2c_info_text">
+                動画
+              </label>
+              <div class="col-md-6">
+                <label class="c2c_input">
+                  <video src="<%= rails_blob_path(@video.video) %>" type="video/mp4" controls></video>
+                </label>
+              </div>
+            </div>
+            <div class="form-group row px-2">
+              <label for="title" class="col-md-4 col-form-label text-md-right c2c_info_text">
+                タイトル
+              </label>
+              <div class="col-md-6">
+                <p><%= @video.title %></p>
+              </div>
+            </div>
+            <div class="form-group row px-2">
+              <label for="content" class="col-md-4 col-form-label text-md-right c2c_info_text">
+                内容
+              </label>
+              <div class="col-md-6">
+                <p><%= @video.content %></p>
+              </div>
+            </div>
+            <div class="form-group row px-2 mb-4">
+              <label for="genre" class="col-md-4 col-form-label text-md-right c2c_info_text">
+                ジャンル
+              </label>
+              <div class="col-md-6">
+                <% @video_genre = @video.genre %>
+                <p><%= @video_genre.name %></p>
+              </div>
+            </div>
+          <% end %>
+          <div class="row justify-content-center">
+            <!--自分ののみ削除表示-->
+            <%= link_to "削除する", user_video_path(@video), method: :delete %>
+            <%= link_to "コメントする", user_video_comments_path(@video) %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
