Edit user/video information

--- a/app/views/user/informations/index.html.erb
+++ b/app/views/user/informations/index.html.erb
@@ -1,5 +1,26 @@
-<h2>告知一覧</h2>
-
-<% @informations. each do |information| %>
-  <%= link_to information.title, user_information_path(information) %>
-<% end %>
+<div class="p-main">
+  <div class="row mx-0 ml-2">
+    <i class="fas fa-arrow-left"></i>
+    <%= link_to "戻る", user_user_path(current_user) %>
+  </div>
+  <h2 class="text-center mb-3 pb-3" style="color: #1a1a1a+;">告知</h2>
+  <h3 class="text-center mb-0" style="color: #1a1a1a+; background-color: #ffd5da; padding: 10px 0; border-top: solid 1px #EB3642;">告知一覧</h3>
+  <div class="row justify-content-center mx-1 my-4">
+    <% @informations. each do |information| %>
+    <div class="col-md-6">
+      <div class="card mb-3">
+        <div class="card -body p-2">
+          <h5 class="card-text">タイトル：<%= link_to information.title, user_information_path(information) %></h5>
+          <h7 class="card-text">ジャンル：</h7>
+          <p class="card-text"><%= information.content %></p>
+          <p class="card-text"><%= information.created_at %></p>
+          <h7 calss="media">ユーザー名：</h7>
+        </div>
+        <div class="text-center mb-2">
+          <%= link_to "告知詳細", user_information_path(information) %>
+        </div>
+      </div>
+    </div>
+    <% end %>
+  </div>
+</div>
