--- a/app/views/user/informations/new.html.erb
+++ b/app/views/user/informations/new.html.erb
@@ -1,18 +1,52 @@
-<h2>告知投稿</h2>
+<div class="container mb-4">
+  <div class="row justify-content-center">
+    <div class="col-12 ml-12">
+    <i class="fas fa-arrow-left"></i>
+    <%= link_to "戻る", user_user_path(current_user) %>
+    </div>
+    <h2 class="text-center mb-3 pb-3" style="color: #1a1a1a+;">告知</h2>
+    <div class="col-md-12 col-sm-12 col-12">
+      <div class="card">
+        <div class="card-header text-center mb-0" style="color: #1a1a1a+; background-color: #ffd5da; padding: 10px 0; border-top: solid 1px #EB3642;">告知投稿</div>
+        <div class="card-body">
+        <%= form_with model:@information, url: user_informations_path, local:true do |f| %>
+        
+          <div class="form-group row py-1">
+            <label for="title" class="col-md-4 col-form-label text-md-right">
+              <%= f.label :title %>
+            </label>
+            <div class="col-md-6">
+              <%= f.text_field :title, class: 'form-control information_title' %>
+            </div>
+          </div>
 
-<%= form_with model:@information, url: user_informations_path, local:true do |f| %>
-      
-  <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control information_title' %>
+          <div class="form-group row py-1">
+            <label for="content" class="col-md-4 col-form-label text-md-right">
+              <%= f.label :content %>
+            </label>
+            <div class="col-md-6">
+              <%= f.text_field :content, class: 'form-control information_content' %>
+            </div>
+          </div>
+        
+          <!--<div class="form-group row py-1">-->
+          <!--  <label for="genre" class="col-md-4 col-form-label text-md-right">-->
+          <!--    %= f.label :genre %>-->
+          <!--  </label>-->
+          <!--  <div class="col-md-6">-->
+          <!--    <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "--選択して下さい--" %>-->
+          <!--  </div>-->
+          <!--</div>-->
+          
+          <div class="form-group row mb-0">
+            <div class="col-md-6 offset-md-4 text-center mt-2 mb-5 mx-auto">
+              <%= f.submit "新規登録",  class: 'btn btn-success' %>
+            </div>
+          </div>
+          
+        <% end %>
+        </div>
+      </div>
+    </div>
   </div>
-      
-  <div class="form-group">
-    <%= f.label :content %>
-    <%= f.text_area :content, class: 'form-control information_body' %>
-  </div>
-    
-  <div class="form-group">
-    <%= f.submit  class: 'btn btn-success' %>
-  </div>
-<% end %>
+</div>
