--- a/app/views/user/informations/show.html.erb
+++ b/app/views/user/informations/show.html.erb
@@ -1,9 +1,50 @@
-<h2>告知詳細</h2>
-
-[title]
-<%= @information.title %>
-
-[content]
-<%= @information.content %>
-
-<%= link_to "戻る", user_informations_path %>
+<div class="p-main">
+  <div class="row mx-0 ml-2">
+    <i class="fas fa-arrow-left"></i>
+    <%= link_to "戻る", user_informations_path %>
+  </div>
+  <h2 class="text-center mb-3 pb-3" style="color: #1a1a1a+;">告知</h2>
+  <h3 class="text-center mb-0" style="color: #1a1a1a+; background-color: #ffd5da; padding: 10px 0; border-top: solid 1px #EB3642;">告知詳細</h3>
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <div class>
+        <div class="col-xs-12 mx-auto information_border">
+          
+            <div class="form-group row px-2">
+              <label for="title" class="col-md-4 col-form-label text-md-right c2c_info_text">
+                タイトル
+              </label>
+              <div class="col-md-6">
+                <p><%= @information.title %></p>
+              </div>
+            </div>
+            
+            <div class="form-group row px-2">
+              <label for="content" class="col-md-4 col-form-label text-md-right c2c_info_text">
+                内容
+              </label>
+              <div class="col-md-6">
+                <p><%= @information.content %></p>
+              </div>
+            </div>
+            
+            <!--<div class="form-group row px-2 mb-4">-->
+            <!--  <label for="genre" class="col-md-4 col-form-label text-md-right c2c_info_text">-->
+            <!--    ジャンル-->
+            <!--  </label>-->
+            <!--  <div class="col-md-6">-->
+            <!--    % @information_genre = @information.genre %>-->
+            <!--    <p>%= @information_genre.name %></p>-->
+            <!--  </div>-->
+            <!--</div>-->
+            
+          <div class="row justify-content-center">
+            <!--自分ののみ削除表示-->
+            <%= link_to "編集", edit_user_information_path(@information) %>
+            <%= link_to "削除", user_information_path(@information), method: :delete %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
