--- a/app/views/user/users/index.html.erb
+++ b/app/views/user/users/index.html.erb
@@ -1,11 +1,26 @@
-<!--コーチ一覧-->
-<h2>コーチ一覧</h2>
-
-<% @users. each do |user| %>
-  <%= link_to user.full_name, user_user_path(user) %>
-  <% user_genre = user.genre %>
-  <%= user_genre.name %>
-  <%= user.account %>
-<% end %>
-
-  
+<div class="p-main mt-3">
+  <div class="row mx-0 ml-2">
+    <i class="fas fa-arrow-left"></i>
+    <%= link_to "戻る", user_user_path(@user) %>
+  </div>
+  <h2 class="text-center mb-3 pb-3" style="color: #1a1a1a; border-bottom: solid 1px #EB3642;">コーチ一覧</h2>
+    <div class="container text-center mt-3 col-md-12 col-sm-12 col-12">
+    <% @users. each do |user| %>
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-3 col-sm-3 col-3 d-flex align-items-center justify-content-center">
+          <%= attachment_image_tag user, :icon, size: "100x100" %>
+        </div>
+        <div class="col-md-6 col-sm-6 col-6 mt-2 align-items-center justify-content-center">
+          <p class="mb-0"><%= link_to user.full_name, user_user_path(user) %></p>
+          <% user_genre = user.genre %>
+          <p class="mb-0"><%= user_genre.name %></p>
+          <% user_status = user.status %>
+          <p class="mb-0"><%= user_status.name %></p>
+        </div>
+        <div class="col-md-3 col-sm-3 col-3 d-flex align-items-center justify-content-center">
+          <!--フォローする　フォロー中-->
+        </div>
+      </div>
+    <% end %>
+    </div>
+</div>
