--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -43,8 +43,8 @@
               ジャンル<span class="text-secondary">(必須)</span>
             </label>
             <div class="col-md-6">
-              <% @user_genre = @user.genre %>
-              <%= @user_genre.name %>
+              <!--% @user_genre = @user.genre %>-->
+              <%= @user.genre_id %>
             </div>
           </div>
 
@@ -54,8 +54,8 @@
               ステータス<span class="text-secondary">(必須)</span>
             </label>
             <div class="col-md-6">
-              <% @user_status = @user.status %>
-              <%= @user_status.name %>
+              <!--% @user_status = @user.status %>-->
+              <%= @user.status_id %>
             </div>
           </div>
 
@@ -162,8 +162,8 @@
               ジャンル<span class="text-secondary">(必須)</span>
             </label>
             <div class="col-md-6">
-              <% @user_genre = @user.genre %>
-              <%= @user_genre.name %>
+              <!--% @user_genre = @user.genre %>-->
+              <%= @user.genre_id %>
             </div>
           </div>
 
@@ -173,8 +173,8 @@
               ステータス<span class="text-secondary">(必須)</span>
             </label>
             <div class="col-md-6">
-              <% @user_status = @user.status %>
-              <%= @user_status.name %>
+              <!--% @user_status = @user.status %>-->
+              <%= @user.status_id %>
             </div>
           </div>
 
