--- a/app/views/user/videos/show.html.erb
+++ b/app/views/user/videos/show.html.erb
@@ -40,8 +40,8 @@
                 ジャンル
               </label>
               <div class="col-md-6">
-                <% @video_genre = @video.genre %>
-                <p><%= @video_genre.name %></p>
+                <!--% @video_genre = @video.genre %>-->
+                <p><%= @video.genre_id %></p>
               </div>
             </div>
           <% end %>
